--- a/test/src/test/java/uks/fulibgen/shop/classModel.yaml
+++ b/test/src/test/java/uks/fulibgen/shop/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	testordering
+  classes: 	testOrdering
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -7,14 +7,14 @@
   packageName: 	uks.fulibgen.shop
   packageSrcFolder: 	"src/test/java/uks/fulibgen/shop"
 
-- testordering: 	org.fulib.classmodel.Clazz
-  attributes: 	testordering_eventBroker
+- testOrdering: 	org.fulib.classmodel.Clazz
+  attributes: 	testOrdering_eventBroker
   importList: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;"
   imports: 	"import org.junit.Test;" 	"import uks.fulibgen.shop.events.*;" 	"import uks.fulibgen.shop.Shop.ShopService;" 	"import uks.fulibgen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;"
-  methods: 	testordering_ordering 	testordering_publish
+  methods: 	testOrdering_ordering_smooth 	testOrdering_publish
   model: 	c
   modified: 	false
-  name: 	Testordering
+  name: 	TestOrdering
   propertyStyle: 	Bean
 
 - c1: 	org.fulib.classmodel.CollectionType
@@ -24,21 +24,21 @@
   qualifiedImplName: 	java.util.ArrayList
   simpleImplName: 	ArrayList
 
-- testordering_eventBroker: 	org.fulib.classmodel.Attribute
-  clazz: 	testordering
-  id: 	Testordering_eventBroker
+- testOrdering_eventBroker: 	org.fulib.classmodel.Attribute
+  clazz: 	testOrdering
+  id: 	TestOrdering_eventBroker
   modified: 	false
   name: 	eventBroker
   propertyStyle: 	Bean
   type: 	EventBroker
   typeSignature: 	EventBroker
 
-- testordering_ordering: 	org.fulib.classmodel.FMethod
+- testOrdering_ordering_smooth: 	org.fulib.classmodel.FMethod
   annotations: 	"@Test"
-  clazz: 	testordering
+  clazz: 	testOrdering
   declaration: 	"@Test
-public void ordering()"
-  id: 	Testordering_ordering
+public void ordering_smooth()"
+  id: 	TestOrdering_ordering_smooth
   methodBody: 	"// start the event broker
 eventBroker = new EventBroker();
 eventBroker.start();
@@ -57,14 +57,12 @@ e1200.setId(\"12:00\");
 e1200.setBox(\"box23\");
 e1200.setProduct(\"shoes\");
 e1200.setPlace(\"shelf23\");
-e1200.setUser(\"Bob\");
 publish(e1200);
 
 // create CommandSent: 13:00
 CommandSent e1300 = new CommandSent();
 e1300.setId(\"13:00\");
 e1300.setType(\"OrderRegistered\");
-e1300.setUser(\"Alice\");
 e1300.setL1(\"label welcome to the shop\");
 e1300.setProduct(\"input product? shoes\");
 e1300.setCustomer(\"input name? Alice\");
@@ -78,7 +76,6 @@ e1301.setId(\"13:01\");
 e1301.setProduct(\"shoes\");
 e1301.setCustomer(\"Alice\");
 e1301.setAddress(\"Wonderland 1\");
-e1301.setUser(\"Alice\");
 publish(e1301);
 
 // create OrderPicked: 14:00
@@ -92,16 +89,16 @@ System.out.println();
 "
   modified: 	false
   modifiers: 	public
-  name: 	ordering
+  name: 	ordering_smooth
   paramsString: 	""
   returnType: 	void
-  signature: 	"class/Testordering/method/ordering()"
+  signature: 	"class/TestOrdering/method/ordering_smooth()"
 
-- testordering_publish: 	org.fulib.classmodel.FMethod
+- testOrdering_publish: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	testordering
+  clazz: 	testOrdering
   declaration: 	"public void publish(Event event)"
-  id: 	Testordering_publish
+  id: 	TestOrdering_publish
   methodBody: 	"String yaml = Yaml.encode(event);
 
 try {
@@ -118,5 +115,5 @@ catch (UnirestException e) {
   name: 	publish
   paramsString: 	"Event event"
   returnType: 	void
-  signature: 	"class/Testordering/method/publish(Event)"
+  signature: 	"class/TestOrdering/method/publish(Event)"
 
