--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -265,6 +265,10 @@ if (event.getId().equals(\"13:01\")) {
    pick1300.setCustomer(\"Alice\");
    pick1300.setAddress(\"Wonderland 1\");
    pick1300.setState(\"todo\");
+
+   OrderApproved e1305 = new OrderApproved();
+   e1305.setOrder(\"order1300\");
+   publish(e1305);
 }
 "
   modified: 	false
