--- a/test/src/test/java/uks/debuggen/shop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/shop/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	testordering
+  classes: 	testordering_smooth
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -7,14 +7,14 @@
   packageName: 	uks.debuggen.shop
   packageSrcFolder: 	"test/src/test/java/uks/debuggen/shop"
 
-- testordering: 	org.fulib.classmodel.Clazz
-  attributes: 	testordering_eventBroker
+- testordering_smooth: 	org.fulib.classmodel.Clazz
+  attributes: 	testordering_smooth_eventBroker
   importList: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;"
   imports: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;"
-  methods: 	testordering_ordering 	testordering_publish
+  methods: 	testordering_smooth_ordering_smooth 	testordering_smooth_publish
   model: 	c
   modified: 	false
-  name: 	Testordering
+  name: 	Testordering_smooth
   propertyStyle: 	Bean
 
 - c1: 	org.fulib.classmodel.CollectionType
@@ -24,21 +24,21 @@
   qualifiedImplName: 	java.util.ArrayList
   simpleImplName: 	ArrayList
 
-- testordering_eventBroker: 	org.fulib.classmodel.Attribute
-  clazz: 	testordering
-  id: 	Testordering_eventBroker
+- testordering_smooth_eventBroker: 	org.fulib.classmodel.Attribute
+  clazz: 	testordering_smooth
+  id: 	Testordering_smooth_eventBroker
   modified: 	false
   name: 	eventBroker
   propertyStyle: 	Bean
   type: 	EventBroker
   typeSignature: 	EventBroker
 
-- testordering_ordering: 	org.fulib.classmodel.FMethod
+- testordering_smooth_ordering_smooth: 	org.fulib.classmodel.FMethod
   annotations: 	"@Test"
-  clazz: 	testordering
+  clazz: 	testordering_smooth
   declaration: 	"@Test
-public void ordering()"
-  id: 	Testordering_ordering
+public void ordering_smooth()"
+  id: 	Testordering_smooth_ordering_smooth
   methodBody: 	"// start the event broker
 eventBroker = new EventBroker();
 eventBroker.start();
@@ -89,16 +89,16 @@ System.out.println();
 "
   modified: 	false
   modifiers: 	public
-  name: 	ordering
+  name: 	ordering_smooth
   paramsString: 	""
   returnType: 	void
-  signature: 	"class/Testordering/method/ordering()"
+  signature: 	"class/Testordering_smooth/method/ordering_smooth()"
 
-- testordering_publish: 	org.fulib.classmodel.FMethod
+- testordering_smooth_publish: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	testordering
+  clazz: 	testordering_smooth
   declaration: 	"public void publish(Event event)"
-  id: 	Testordering_publish
+  id: 	Testordering_smooth_publish
   methodBody: 	"String yaml = Yaml.encode(event);
 
 try {
@@ -115,5 +115,5 @@ catch (UnirestException e) {
   name: 	publish
   paramsString: 	"Event event"
   returnType: 	void
-  signature: 	"class/Testordering/method/publish(Event)"
+  signature: 	"class/Testordering_smooth/method/publish(Event)"
 
